; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_ctree.c_insert_ptr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_ctree.c_insert_ptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_trans_handle = type { i32 }
%struct.btrfs_root = type { i32 }
%struct.btrfs_path = type { %struct.extent_buffer** }
%struct.extent_buffer = type { i32 }
%struct.btrfs_disk_key = type { i32 }

@MOD_LOG_KEY_ADD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.btrfs_trans_handle*, %struct.btrfs_root*, %struct.btrfs_path*, %struct.btrfs_disk_key*, i32, i32, i32)* @insert_ptr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @insert_ptr(%struct.btrfs_trans_handle* %0, %struct.btrfs_root* %1, %struct.btrfs_path* %2, %struct.btrfs_disk_key* %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca %struct.btrfs_trans_handle*, align 8
  %9 = alloca %struct.btrfs_root*, align 8
  %10 = alloca %struct.btrfs_path*, align 8
  %11 = alloca %struct.btrfs_disk_key*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.extent_buffer*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store %struct.btrfs_trans_handle* %0, %struct.btrfs_trans_handle** %8, align 8
  store %struct.btrfs_root* %1, %struct.btrfs_root** %9, align 8
  store %struct.btrfs_path* %2, %struct.btrfs_path** %10, align 8
  store %struct.btrfs_disk_key* %3, %struct.btrfs_disk_key** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %18 = load %struct.btrfs_path*, %struct.btrfs_path** %10, align 8
  %19 = getelementptr inbounds %struct.btrfs_path, %struct.btrfs_path* %18, i32 0, i32 0
  %20 = load %struct.extent_buffer**, %struct.extent_buffer*** %19, align 8
  %21 = load i32, i32* %14, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds %struct.extent_buffer*, %struct.extent_buffer** %20, i64 %22
  %24 = load %struct.extent_buffer*, %struct.extent_buffer** %23, align 8
  %25 = icmp ne %struct.extent_buffer* %24, null
  %26 = xor i1 %25, true
  %27 = zext i1 %26 to i32
  %28 = call i32 @BUG_ON(i32 %27)
  %29 = load %struct.btrfs_path*, %struct.btrfs_path** %10, align 8
  %30 = getelementptr inbounds %struct.btrfs_path, %struct.btrfs_path* %29, i32 0, i32 0
  %31 = load %struct.extent_buffer**, %struct.extent_buffer*** %30, align 8
  %32 = load i32, i32* %14, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds %struct.extent_buffer*, %struct.extent_buffer** %31, i64 %33
  %35 = load %struct.extent_buffer*, %struct.extent_buffer** %34, align 8
  %36 = call i32 @btrfs_assert_tree_locked(%struct.extent_buffer* %35)
  %37 = load %struct.btrfs_path*, %struct.btrfs_path** %10, align 8
  %38 = getelementptr inbounds %struct.btrfs_path, %struct.btrfs_path* %37, i32 0, i32 0
  %39 = load %struct.extent_buffer**, %struct.extent_buffer*** %38, align 8
  %40 = load i32, i32* %14, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds %struct.extent_buffer*, %struct.extent_buffer** %39, i64 %41
  %43 = load %struct.extent_buffer*, %struct.extent_buffer** %42, align 8
  store %struct.extent_buffer* %43, %struct.extent_buffer** %15, align 8
  %44 = load %struct.extent_buffer*, %struct.extent_buffer** %15, align 8
  %45 = call i32 @btrfs_header_nritems(%struct.extent_buffer* %44)
  store i32 %45, i32* %16, align 4
  %46 = load i32, i32* %13, align 4
  %47 = load i32, i32* %16, align 4
  %48 = icmp sgt i32 %46, %47
  %49 = zext i1 %48 to i32
  %50 = call i32 @BUG_ON(i32 %49)
  %51 = load i32, i32* %16, align 4
  %52 = load %struct.btrfs_root*, %struct.btrfs_root** %9, align 8
  %53 = call i32 @BTRFS_NODEPTRS_PER_BLOCK(%struct.btrfs_root* %52)
  %54 = icmp eq i32 %51, %53
  %55 = zext i1 %54 to i32
  %56 = call i32 @BUG_ON(i32 %55)
  %57 = load i32, i32* %13, align 4
  %58 = load i32, i32* %16, align 4
  %59 = icmp ne i32 %57, %58
  br i1 %59, label %60, label %89

60:                                               ; preds = %7
  %61 = load i32, i32* %14, align 4
  %62 = icmp ne i32 %61, 0
  br i1 %62, label %63, label %75

63:                                               ; preds = %60
  %64 = load %struct.btrfs_root*, %struct.btrfs_root** %9, align 8
  %65 = getelementptr inbounds %struct.btrfs_root, %struct.btrfs_root* %64, i32 0, i32 0
  %66 = load i32, i32* %65, align 4
  %67 = load %struct.extent_buffer*, %struct.extent_buffer** %15, align 8
  %68 = load i32, i32* %13, align 4
  %69 = add nsw i32 %68, 1
  %70 = load i32, i32* %13, align 4
  %71 = load i32, i32* %16, align 4
  %72 = load i32, i32* %13, align 4
  %73 = sub nsw i32 %71, %72
  %74 = call i32 @tree_mod_log_eb_move(i32 %66, %struct.extent_buffer* %67, i32 %69, i32 %70, i32 %73)
  br label %75

75:                                               ; preds = %63, %60
  %76 = load %struct.extent_buffer*, %struct.extent_buffer** %15, align 8
  %77 = load i32, i32* %13, align 4
  %78 = add nsw i32 %77, 1
  %79 = call i32 @btrfs_node_key_ptr_offset(i32 %78)
  %80 = load i32, i32* %13, align 4
  %81 = call i32 @btrfs_node_key_ptr_offset(i32 %80)
  %82 = load i32, i32* %16, align 4
  %83 = load i32, i32* %13, align 4
  %84 = sub nsw i32 %82, %83
  %85 = sext i32 %84 to i64
  %86 = mul i64 %85, 4
  %87 = trunc i64 %86 to i32
  %88 = call i32 @memmove_extent_buffer(%struct.extent_buffer* %76, i32 %79, i32 %81, i32 %87)
  br label %89

89:                                               ; preds = %75, %7
  %90 = load i32, i32* %14, align 4
  %91 = icmp ne i32 %90, 0
  br i1 %91, label %92, label %104

92:                                               ; preds = %89
  %93 = load %struct.btrfs_root*, %struct.btrfs_root** %9, align 8
  %94 = getelementptr inbounds %struct.btrfs_root, %struct.btrfs_root* %93, i32 0, i32 0
  %95 = load i32, i32* %94, align 4
  %96 = load %struct.extent_buffer*, %struct.extent_buffer** %15, align 8
  %97 = load i32, i32* %13, align 4
  %98 = load i32, i32* @MOD_LOG_KEY_ADD, align 4
  %99 = call i32 @tree_mod_log_insert_key(i32 %95, %struct.extent_buffer* %96, i32 %97, i32 %98)
  store i32 %99, i32* %17, align 4
  %100 = load i32, i32* %17, align 4
  %101 = icmp slt i32 %100, 0
  %102 = zext i1 %101 to i32
  %103 = call i32 @BUG_ON(i32 %102)
  br label %104

104:                                              ; preds = %92, %89
  %105 = load %struct.extent_buffer*, %struct.extent_buffer** %15, align 8
  %106 = load %struct.btrfs_disk_key*, %struct.btrfs_disk_key** %11, align 8
  %107 = load i32, i32* %13, align 4
  %108 = call i32 @btrfs_set_node_key(%struct.extent_buffer* %105, %struct.btrfs_disk_key* %106, i32 %107)
  %109 = load %struct.extent_buffer*, %struct.extent_buffer** %15, align 8
  %110 = load i32, i32* %13, align 4
  %111 = load i32, i32* %12, align 4
  %112 = call i32 @btrfs_set_node_blockptr(%struct.extent_buffer* %109, i32 %110, i32 %111)
  %113 = load %struct.btrfs_trans_handle*, %struct.btrfs_trans_handle** %8, align 8
  %114 = getelementptr inbounds %struct.btrfs_trans_handle, %struct.btrfs_trans_handle* %113, i32 0, i32 0
  %115 = load i32, i32* %114, align 4
  %116 = icmp eq i32 %115, 0
  %117 = zext i1 %116 to i32
  %118 = call i32 @WARN_ON(i32 %117)
  %119 = load %struct.extent_buffer*, %struct.extent_buffer** %15, align 8
  %120 = load i32, i32* %13, align 4
  %121 = load %struct.btrfs_trans_handle*, %struct.btrfs_trans_handle** %8, align 8
  %122 = getelementptr inbounds %struct.btrfs_trans_handle, %struct.btrfs_trans_handle* %121, i32 0, i32 0
  %123 = load i32, i32* %122, align 4
  %124 = call i32 @btrfs_set_node_ptr_generation(%struct.extent_buffer* %119, i32 %120, i32 %123)
  %125 = load %struct.extent_buffer*, %struct.extent_buffer** %15, align 8
  %126 = load i32, i32* %16, align 4
  %127 = add nsw i32 %126, 1
  %128 = call i32 @btrfs_set_header_nritems(%struct.extent_buffer* %125, i32 %127)
  %129 = load %struct.extent_buffer*, %struct.extent_buffer** %15, align 8
  %130 = call i32 @btrfs_mark_buffer_dirty(%struct.extent_buffer* %129)
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @btrfs_assert_tree_locked(%struct.extent_buffer*) #1

declare dso_local i32 @btrfs_header_nritems(%struct.extent_buffer*) #1

declare dso_local i32 @BTRFS_NODEPTRS_PER_BLOCK(%struct.btrfs_root*) #1

declare dso_local i32 @tree_mod_log_eb_move(i32, %struct.extent_buffer*, i32, i32, i32) #1

declare dso_local i32 @memmove_extent_buffer(%struct.extent_buffer*, i32, i32, i32) #1

declare dso_local i32 @btrfs_node_key_ptr_offset(i32) #1

declare dso_local i32 @tree_mod_log_insert_key(i32, %struct.extent_buffer*, i32, i32) #1

declare dso_local i32 @btrfs_set_node_key(%struct.extent_buffer*, %struct.btrfs_disk_key*, i32) #1

declare dso_local i32 @btrfs_set_node_blockptr(%struct.extent_buffer*, i32, i32) #1

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @btrfs_set_node_ptr_generation(%struct.extent_buffer*, i32, i32) #1

declare dso_local i32 @btrfs_set_header_nritems(%struct.extent_buffer*, i32) #1

declare dso_local i32 @btrfs_mark_buffer_dirty(%struct.extent_buffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
